--- a/normalize.css
+++ b/normalize.css
@@ -7,9 +7,64 @@
  */
 
 html {
-  font-family: sans-serif; /* 1 */
+  font-family: Geneva; /* 1 */
   -ms-text-size-adjust: 100%; /* 2 */
   -webkit-text-size-adjust: 100%; /* 2 */
+}
+
+button {
+  background-color: transparent;
+  border: none;
+  color:#7a0019;
+  font-weight: bold;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 150%;
+  position: absolute;top: 180;right: 5;
+}
+
+/**
+ * 1. Set style for menu
+ * {
+  margin:0;
+  padding:0;}
+
+ */
+
+ nav {
+  width: 100%;
+  height: 20pt;
+  background-color: #df9eab;
+ }
+ 
+ul li {
+  list-style: none;
+  display: inline-flex;
+  float: left;
+  line-height: 100%;
+}
+
+ul li a {
+  display: block;
+  text-decoration: none;
+  color: #7a0019;
+  font-size: 100%;
+  font-family: Geneva;
+  line-height: 0px;
+  padding: 1 20;
+  font-weight: bold;}
+
+.row {
+  display: flex;
+  align-items: center;
+  justify-content: center
+}
+
+.column {
+  flex: 33%;
+  padding: 5px;
 }
 
 /**
