--- a/normalize.css
+++ b/normalize.css
@@ -34,35 +34,6 @@ button {
   position: absolute;top: 180;right: 5;
 }
 
-
-/**
- * Set button style for the website menu.
-
- */
-
- nav {
-  width: 100%;
-  height: 20pt;
-  background-color: #df9eab;
- }
- 
-ul li {
-  list-style: none;
-  display: inline-flex;
-  float: left;
-  line-height: 100%;
-}
-
-ul li a {
-  display: block;
-  text-decoration: none;
-  color: #7a0019;
-  font-size: 100%;
-  font-family: Geneva;
-  line-height: 0px;
-  padding: 1 10;
-  font-weight: bold;}
-
 .row {
   display: flex;
   align-items: center;
@@ -78,9 +49,6 @@ ul li a {
  * Remove default margin.
  */
 
-body {
-  margin: 10;
-}
 
 /* HTML5 display definitions
    ========================================================================== */
@@ -522,3 +490,39 @@ th {
 .topnav .icon {
   display: none;
 }
+
+/*Dropdown Menu Options */
+
+.parent { /* Parent Menu Options */ 
+  display: block;
+  position: relative;
+  float:left;
+  line-height:30px;
+  background-color: #df9eab;
+  text-align:center;}
+.parent a { /* Parent Menu Text Options */ 
+  margin: 10px;
+  color: #7a0019;
+  text-decoration: none;}
+.parent:hover > ul {
+  display:block;
+  position:absolute;}
+.parent:hover > a {
+color:white
+}
+.parent:hover > li {
+background-color: #ffde7a;
+}
+
+.child {
+  display: none;}
+.child li { /* Submenu Dropdown Options */ 
+  background-color: #df9eab;
+  line-height: 30px;
+  border-bottom:#CCC 1px solid;
+  border-right:#CCC 1px solid; 
+  width: fit-content;
+  text-align: center;}
+
+.child li a { /* Submenu Dropdown Text Options */ 
+  color: #7a0019}
