--- a/normalize.css
+++ b/normalize.css
@@ -32,6 +32,20 @@ buttonCV {
   cursor:pointer
 }
 
+buttonGRC {
+  background-color: #7a0019 ;
+  font-weight: bold;
+  border: 2px;
+  color: #ffde7a;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 100%;
+  cursor:pointer;
+  padding: 15pt;
+  border-radius: 10px;
+}
+
 .row {
   display: flex;
   align-items: center;
