--- a/test.css
+++ b/test.css
@@ -117,38 +117,32 @@ font-family:'Geneva';
 
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: #5a5a5a;
-    overflow: hidden;
+    background-color: #333333;
+    overflow:auto;
   }
   
   /* Style the links inside the navigation bar */
   .topnav a {
     float: left;
-    color: #f2f2f2;
+    display: block;
+    color: #d5d6d2;
     text-align: center;
     padding: 7px 8px;
     text-decoration: none;
     font-size: 18px;
   }
   
-  /* Change the color of links on hover */
-  .topnav a:hover {
-    background-color: #333333;
-    color: #ddd;
-    font-weight: bolder;
-  }
-  
-  /* Add a color to the active/current link */
-  .topnav a.active {
-    background-color: #ddd;
+  /* Add an active class to highlight the current page */
+  .active {
+    background-color: #d5d6d2;
     color: #333333;
-    font-weight: bolder;
   }
 
- /* Add an active class to highlight the current page */
-.active {
-    background-color: #04AA6D;
-    color: white;
+  /* Add a color to the active/current link */
+.topnav a.active {
+    background-color: #d5d6d2;
+    color: #333333;
+    font-weight: bolder;
   }
   
   /* Hide the link that should open and close the topnav on small screens */
@@ -164,11 +158,11 @@ font-family:'Geneva';
   
   /* Style the dropdown button to fit inside the topnav */
   .dropdown .dropbtn {
-    font-size: 17px; 
+    font-size: 18px; 
     border: none;
     outline: none;
-    color: white;
-    padding: 14px 16px;
+    color: #d5d6d2;
+    padding: 7px 8px;
     background-color: inherit;
     font-family: inherit;
     margin: 0;
@@ -178,7 +172,7 @@ font-family:'Geneva';
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #d5d6d2;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -187,8 +181,8 @@ font-family:'Geneva';
   /* Style the links inside the dropdown */
   .dropdown-content a {
     float: none;
-    color: black;
-    padding: 12px 16px;
+    color: #333333;
+    padding: 10px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
@@ -196,14 +190,15 @@ font-family:'Geneva';
   
   /* Add a dark background on topnav links and the dropdown button on hover */
   .topnav a:hover, .dropdown:hover .dropbtn {
-    background-color: #555;
-    color: white;
+    background-color: #d5d6d2;
+    color: #333333;
   }
   
   /* Add a grey background to dropdown links on hover */
   .dropdown-content a:hover {
-    background-color: #ddd;
+    background-color: rgb(244, 241, 241);
     color: black;
+    font-weight: bold;
   }
   
   /* Show the dropdown menu when the user moves the mouse over the dropdown button */
