--- a/test.css
+++ b/test.css
@@ -261,3 +261,28 @@ font-family:'Geneva';
     flex: 33%;
     padding: 5px;
   }
+
+  buttonCV {
+    background-color: transparent;
+    border: none;
+    color:blue;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 100%;
+    cursor:pointer
+  }
+  
+  buttonGRC {
+    background-color: #7a0019 ;
+    font-weight: bold;
+    border: 2px;
+    color: #ffde7a;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 100%;
+    cursor:pointer;
+    padding: 15pt;
+    border-radius: 10px;
+  }
