--- a/working.css
+++ b/working.css
@@ -149,14 +149,19 @@ c[lass = "bannerH2"]{ /* Text Banner Style: */
   .active {
     background-color: #d5d6d2;
     color: #333333;
-  }
+  }  
+
+  .dropdownactive {
+    background-color: white;
+    color: #333333;
+  }  
 
   /* Add a color to the active/current link */
 .topnav a.active {
     background-color: #d5d6d2;
     color: #333333;
     font-weight: bolder;
-  }
+  } 
   
   /* Hide the link that should open and close the topnav on small screens */
   .topnav .icon {
@@ -168,7 +173,7 @@ c[lass = "bannerH2"]{ /* Text Banner Style: */
     float: left;
     overflow: hidden;
   }
-  
+
   /* Style the dropdown button to fit inside the topnav */
   .dropdown .dropbtn {
     font-size: 1.2vw; 
@@ -177,6 +182,17 @@ c[lass = "bannerH2"]{ /* Text Banner Style: */
     color: #d5d6d2;
     padding: 0.5vw 0.6vw;
     background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+  
+  .dropdown .dropbtnActive {
+    font-size: 1.2vw; 
+    border: none;
+    outline: none;
+    background-color: #d5d6d2;
+    color: #333333;
+    padding: 0.5vw 0.6vw;
     font-family: inherit;
     margin: 0;
   }
@@ -190,6 +206,8 @@ c[lass = "bannerH2"]{ /* Text Banner Style: */
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
+
+
   
   /* Style the links inside the dropdown */
   .dropdown-content a {
@@ -201,7 +219,7 @@ c[lass = "bannerH2"]{ /* Text Banner Style: */
     text-align: left;
   }
   
-  /* Add a dark background on topnav links and the dropdown button on hover */
+  /* Add a light background on topnav links and the dropdown button on hover */
   .topnav a:hover, .dropdown:hover .dropbtn {
     background-color: #d5d6d2;
     color: #333333;
@@ -212,12 +230,11 @@ c[lass = "bannerH2"]{ /* Text Banner Style: */
     background-color: rgb(244, 241, 241);
     color: black;
   }
-  
+
   /* Show the dropdown menu when the user moves the mouse over the dropdown button */
   .dropdown:hover .dropdown-content {
     display: block;
   }
-
 
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 600px) {
@@ -266,6 +283,7 @@ c[lass = "bannerH2"]{ /* Text Banner Style: */
     flex: 33%;
     padding: 5px;
   }
+  /* this button allows the user to open a pdf version of your cv */
 
   buttonCV {
     background-color: transparent;
@@ -278,6 +296,7 @@ c[lass = "bannerH2"]{ /* Text Banner Style: */
     cursor:pointer
   }
   
+    /* this button allows the user to open a pdf version of your GRC poster */
   buttonGRC {
     background-color: #7a0019 ;
     font-weight: bold;
@@ -292,6 +311,7 @@ c[lass = "bannerH2"]{ /* Text Banner Style: */
     border-radius: 10px;
   }
 
+    /* this button allow the user to select the banner page title and return to home page */
   buttonBanner {
     background-color: inherit;
     border: none;
@@ -304,6 +324,7 @@ c[lass = "bannerH2"]{ /* Text Banner Style: */
     cursor:pointer
   }
 
+  /* this sets the box class for my 'job search' callout on home page*/
 
 [class = "attn"] {
 background-color: #7a0019;
