--- a/working.css
+++ b/working.css
@@ -382,6 +382,8 @@ padding: 8pt;}
   left: 28%;
   width: 8%;
   cursor:pointer;
+  animation-name: example;
+  animation-duration: 2.5s;
 }
 
 .imageTopDeadHidden {
@@ -399,5 +401,22 @@ padding: 8pt;}
   display: none;
 }
 
+
+
+  @keyframes run-animation {
+    10% {transform: rotate(5deg)}
+    20% {transform: rotate(-10deg)}
+    30% {transform: rotate(10deg)}
+    40% {transform: rotate(-10deg)}
+    50% {transform: rotate(10deg)}
+    60% {transform: rotate(-10deg)}
+    70% {transform: rotate(10deg)}
+    80% {transform: rotate(-10deg)}
+    90% {transform: rotate(10deg)}
+    100% {transform: rotate(-5deg)}
+  }
+
+
+  
 
 
