--- a/working.css
+++ b/working.css
@@ -64,6 +64,22 @@ no buffer around edges so fill is to edge of viewport */
     .ban-10 {width: 83.33vw;}
     .ban-11 {width: 91.66vw;}
     .ban-12 {width: 100vw;}
+    .col-10 {width: 10%;}
+    .col-20 {width: 20%;}
+    .col-21 {width: 21%;}
+    .col-25 {width: 25%}
+    .col-30 {width: 30%;}
+    .col-33 {width: 33%;}
+    .col-35 {width: 35%;}
+    .col-40 {width: 40%;}
+    .col-50 {width: 50%;}
+    .col-60 {width: 60%;}
+    .col-66 {width: 66%;}
+    .col-70 {width: 70%;}
+    .col-75 {width: 75%;}
+    .col-80 {width: 80%;}
+    .col-90 {width: 90%;}
+    .col-100 {width: 100%;}
   }
 
 [class="banner"]{ /* Text Banner Style: */
@@ -94,8 +110,14 @@ c[lass = "bannerH2"]{ /* Text Banner Style: */
  buffer around edges */
  
 /* For mobile phones: */
+
+/* float columns to the left and pad. */
+[class*="col-"] {
+  float: left;
+  padding: 15px;
+}
   
-  @media only screen and (min-width: 768px) {
+@media screen and (min-width: 600px) {
     /* For desktop: */
     .col-1 {width: 8.33vw;}
     .col-2 {width: 16.66vw;}
@@ -112,11 +134,7 @@ c[lass = "bannerH2"]{ /* Text Banner Style: */
   }
 
 
-/* float columns to the left and pad. */
-[class*="col-"] {
-    float: left;
-    padding: 15px;
-  }
+
 
   .row::after {
     content: "";
