--- a/working.css
+++ b/working.css
@@ -468,6 +468,13 @@ padding: 8pt;}
     width: 33vw;
     height: auto;
   }
+  @media screen and (max-width: 600px) {
+    #hcg-slider-1 .hcg-slide-container {
+      width: 90vw;
+      height: auto;
+    }
+  }
+
   .hcg-slider {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
