--- a/working.css
+++ b/working.css
@@ -341,6 +341,8 @@ c[lass = "bannerH2"]{ /* Text Banner Style: */
     align-items: center;
     justify-content: center
   }
+
+  rowSwitch
   
   .column {
     flex: 33%;
